required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Current Version (5.1-dev, SVN trunk):
-------------------------------------

- mapwcs.c/mapwcs11.c: s/neighbour/neighbor/g (#2518)

- mapwms.c: relax FORMAT parameter restrictions for GetFeatureInfo (#2517)

- mapwcs.c: support COVERAGE lists for DescribeCoverage (#2508)

- mapwcs.c: fix lonLatEnvelope/@srsName (#2507)

- mapwcs.c: omit VendorSpecificCapabilities (#2506)

- mapwcs.c: test for either resx/resy OR width/height (#2505)

- mapwcs.c: make GetCoverage demand one of TIME or BBOX (#2504)

- mapwms.c: make GetLegendGraphic listen to TRANSPARENT in OUTPUTFORMAT (#2494)

- OWS: support updatesequence (#2384)

- mapwms.c: test VERSION after service=WMS (#2475)

- OWS: output Capabilities XML updateSequence if set (#2384)

- mapwcs.c: better handling of REQUEST parameter (#2490)

- mapwcs.c: point to correct exception schema (#2481)

- mapows.c: add version negotiation (#996)

- mapwfs.c: return default GML2 when invalid OUTPUTFORMAT passed (#2479)

- mapowscommon.c: add OWS Common style version negotiation (#996)

- mapwcs.c: better section parameter handling for CITE (#2485)

- mapwfs.c: point to the correct schema for exceptions (#2480)

- shp2img.c/shp2pdf.c: clean up usage text, check for invalid layers (#2066)

- completed implementation of RFC24 (#2442, #2032)

- mapwcs.c: require VERSION parameter for DescribeCoverage and GetCoverage (#2473)

- mapwcs.c: change error token to MS_WCSERR instead of MS_WMSERR (#2474)

- mapwcs.c: set exception MIME type to application/vnd.ogc.se_xml for 1.0.0 (#2470)

- mapwcs.c: Generate a decently formatted exception if an WCS XML POST request
  is received (#2476).
